--- a/DMSDriver/DMSDriver/Resources/Storyboards/Login.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Login.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3T1-w1-Qsx">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3T1-w1-Qsx">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -30,10 +28,10 @@
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="27" translatesAutoresizingMaskIntoConstraints="NO" id="au1-ZQ-VK5">
-                                                <rect key="frame" x="40" y="145.5" width="295" height="376"/>
+                                                <rect key="frame" x="40" y="137" width="295" height="393"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vd0-2J-WQF">
-                                                        <rect key="frame" x="0.0" y="0.0" width="295" height="80"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="295" height="90"/>
                                                         <subviews>
                                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_solocate_color" translatesAutoresizingMaskIntoConstraints="NO" id="p3x-iE-7Ni">
                                                                 <rect key="frame" x="0.0" y="0.0" width="295" height="40"/>
@@ -41,18 +39,18 @@
                                                                     <constraint firstAttribute="height" constant="40" id="acQ-0d-mHM"/>
                                                                 </constraints>
                                                             </imageView>
-                                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo-gadot" translatesAutoresizingMaskIntoConstraints="NO" id="XR2-SJ-l5v">
-                                                                <rect key="frame" x="82" y="48" width="187" height="17"/>
+                                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_orgit" translatesAutoresizingMaskIntoConstraints="NO" id="XR2-SJ-l5v">
+                                                                <rect key="frame" x="129" y="48" width="140" height="28"/>
                                                                 <constraints>
-                                                                    <constraint firstAttribute="height" constant="17" id="0xm-hg-n1p"/>
-                                                                    <constraint firstAttribute="width" secondItem="XR2-SJ-l5v" secondAttribute="height" multiplier="11:1" id="S8b-1o-dJn"/>
+                                                                    <constraint firstAttribute="height" constant="28" id="0xm-hg-n1p"/>
+                                                                    <constraint firstAttribute="width" secondItem="XR2-SJ-l5v" secondAttribute="height" multiplier="5:1" id="S8b-1o-dJn"/>
                                                                 </constraints>
                                                             </imageView>
                                                         </subviews>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstItem="p3x-iE-7Ni" firstAttribute="top" secondItem="Vd0-2J-WQF" secondAttribute="top" id="HYc-e6-1QJ"/>
-                                                            <constraint firstAttribute="height" constant="80" id="PcL-HW-05R"/>
+                                                            <constraint firstAttribute="height" constant="90" id="PcL-HW-05R"/>
                                                             <constraint firstItem="XR2-SJ-l5v" firstAttribute="top" secondItem="p3x-iE-7Ni" secondAttribute="bottom" constant="8" id="bd6-DS-gms"/>
                                                             <constraint firstAttribute="trailing" secondItem="XR2-SJ-l5v" secondAttribute="trailing" constant="26" id="dPh-OL-MZn"/>
                                                             <constraint firstItem="p3x-iE-7Ni" firstAttribute="leading" secondItem="Vd0-2J-WQF" secondAttribute="leading" id="gtb-B1-ibD"/>
@@ -60,7 +58,7 @@
                                                         </constraints>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nk2-zT-JBD">
-                                                        <rect key="frame" x="0.0" y="107" width="295" height="98"/>
+                                                        <rect key="frame" x="0.0" y="117" width="295" height="98"/>
                                                         <subviews>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Let-Fn-BtS">
                                                                 <rect key="frame" x="0.0" y="0.0" width="295" height="44"/>
@@ -149,7 +147,7 @@
                                                         </constraints>
                                                     </view>
                                                     <button opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iZD-KY-mMp">
-                                                        <rect key="frame" x="0.0" y="232" width="295" height="17"/>
+                                                        <rect key="frame" x="0.0" y="242" width="295" height="24"/>
                                                         <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="14"/>
                                                         <state key="normal" title="Remember Me" image="check_normal">
                                                             <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -163,7 +161,7 @@
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JwE-2P-DeR">
-                                                        <rect key="frame" x="0.0" y="276" width="295" height="44"/>
+                                                        <rect key="frame" x="0.0" y="293" width="295" height="44"/>
                                                         <color key="backgroundColor" red="0.30196078431372547" green="0.80784313725490198" blue="0.48627450980392156" alpha="1" colorSpace="calibratedRGB"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="44" id="tsu-rV-SiF"/>
@@ -183,7 +181,7 @@
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8HT-Vh-BAx">
-                                                        <rect key="frame" x="90.5" y="347" width="114" height="29"/>
+                                                        <rect key="frame" x="90.5" y="364" width="114" height="29"/>
                                                         <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="14"/>
                                                         <state key="normal" title="Forgot password?">
                                                             <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -298,7 +296,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tAy-dY-ufr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-414" y="-65"/>
+            <point key="canvasLocation" x="-415.19999999999999" y="-65.217391304347828"/>
         </scene>
     </scenes>
     <resources>
@@ -307,7 +305,7 @@
         <image name="login_bg" width="929" height="247"/>
         <image name="login_password" width="48" height="48"/>
         <image name="login_username" width="48" height="55"/>
-        <image name="logo-gadot" width="2242" height="204"/>
+        <image name="logo_orgit" width="510.5" height="102"/>
         <image name="logo_solocate_color" width="320" height="52"/>
     </resources>
 </document>
