--- a/DMSDriver/DMSDriver/App/Views/DropDownVC/Cell/DropDownTableViewCell.xib
+++ b/DMSDriver/DMSDriver/App/Views/DropDownVC/Cell/DropDownTableViewCell.xib
@@ -1,36 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="DropDownTableViewCell" customModule="Gadot_Live" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="57" id="KGk-i7-Jjw" customClass="DropDownTableViewCell" customModule="Gadot_Live" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="57"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="57"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="upd-2I-l7e">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="57"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iOb-2p-Dx2">
-                                <rect key="frame" x="20" y="43" width="280" height="0.5"/>
+                                <rect key="frame" x="20" y="56.5" width="280" height="0.5"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="0.5" id="8tR-tK-KVD"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G82-OD-cVX">
-                                <rect key="frame" x="20" y="0.0" width="280" height="43"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G82-OD-cVX">
+                                <rect key="frame" x="20" y="8" width="280" height="40.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="7Au-nH-h9g"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -39,8 +40,8 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="iOb-2p-Dx2" firstAttribute="leading" secondItem="upd-2I-l7e" secondAttribute="leading" constant="20" id="ABG-r9-o4z"/>
-                            <constraint firstItem="G82-OD-cVX" firstAttribute="top" secondItem="upd-2I-l7e" secondAttribute="top" id="JA2-dt-Giw"/>
-                            <constraint firstItem="iOb-2p-Dx2" firstAttribute="top" secondItem="G82-OD-cVX" secondAttribute="bottom" id="fRU-ft-JkK"/>
+                            <constraint firstItem="G82-OD-cVX" firstAttribute="top" secondItem="upd-2I-l7e" secondAttribute="top" constant="8" id="JA2-dt-Giw"/>
+                            <constraint firstItem="iOb-2p-Dx2" firstAttribute="top" secondItem="G82-OD-cVX" secondAttribute="bottom" constant="8" id="fRU-ft-JkK"/>
                             <constraint firstAttribute="trailing" secondItem="iOb-2p-Dx2" secondAttribute="trailing" constant="20" id="j70-Pn-ycd"/>
                             <constraint firstAttribute="bottom" secondItem="iOb-2p-Dx2" secondAttribute="bottom" id="kHA-UF-6eO"/>
                             <constraint firstItem="G82-OD-cVX" firstAttribute="leading" secondItem="upd-2I-l7e" secondAttribute="leading" constant="20" id="qge-oo-YPx"/>
@@ -59,6 +60,7 @@
             <connections>
                 <outlet property="resultLabel" destination="G82-OD-cVX" id="CvZ-hl-ZjD"/>
             </connections>
+            <point key="canvasLocation" x="137.68115942028987" y="146.98660714285714"/>
         </tableViewCell>
     </objects>
 </document>
